Fix sidebar height on small screens

--- a/src/scss/sidebar.module.scss
+++ b/src/scss/sidebar.module.scss
@@ -58,10 +58,11 @@
 @media screen and (max-width: 650px) {
   .SideBar {
     width: 100%;
-    top: 20px;
+    top: 30px;
     background: #FFFFFF;
     height: inherit;
     display: none;
+    z-index: 20;
   }
 
   .UnorderedList {
